--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,13 +3,15 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
+              android:background="@android:color/holo_purple"
     >
 
     <TextView
-        android:id="@+id/sound_indicator_background"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@android:color/holo_purple"
+        android:id="@+id/sound_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="125dp"
         />
 
 </LinearLayout>
