--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,15 +3,13 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="@android:color/holo_purple"
     >
 
-    <TextView
+    <View
         android:id="@+id/sound_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:textSize="125dp"
         />
 
 </LinearLayout>
