--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
@@ -12,5 +12,15 @@
         android:layout_gravity="center"
         />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/app_icon"
+        android:background="@drawable/icon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        />
+
+</RelativeLayout>
 
